# itsjustbusiness

./: .rustc_info.json  Cargo.toml  README.md
.github/: Cargo.toml
.github/src/: main.rs  practice.rs
assets/: dead chair.tsx  floor_tiles_2.tsx  knocked over chair.tsx  office_furniture.tsx  office_furniture_x2.tsx
business/: Cargo.toml
business/assets/: back chair.tsx  end table.tsx  janitor-v1 (2).tsx  janitor-v1.tsx  janitor32x48 (1).tsx  janitor32x48.tsx  plant_asset1.tsx  table end.tsx  table middle.tsx  tilemap_level1.tmx  tilemap_template.tsx
business/src/: main.rs  willpractice.rs
src/: audio.rs  boundarycollision.rs  collision.rs  cursor.rs  helper.rs  main.rs  move.rs  oldcode.txt  playermovement.rs  practice.rs  tasks.rs  test.rs  text.rs  willpractice.rs
