[package]
name = "business"
version = "0.1.0"
edition = "2021"

[dependencies]
device_query = "2.1.0"
rapier2d = "0.22.0"
bevy = "0.14"
bevy_ecs_tiled = "0.4"
bevy_ecs_tilemap = "0.14"
rand = "0.8.5"
bevy_rapier2d = "0.27.0"
bevy_tweening = "0.11.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
